--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Press 4 to turn left and Press 6 to turn right <br>
+		    Press 5 to accelerate <br>
+		    Press "h" to hyperspace <br>
+		    If you want to slow down, turn around and accelerate the opposite direction
 	    </footer>
 	</body>
 </html>
