--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Asteroids Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press 4 to turn left and Press 6 to turn right <br>
-		    Press 5 to accelerate <br>
+		    Press "4" to turn left and Press "6" to turn right <br>
+		    Press "5" to accelerate <br>
 		    Press "h" to hyperspace <br>
 		    If you want to slow down, turn around and accelerate the opposite direction
 	    </footer>
