--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		    Press "4" to turn left and Press "6" to turn right <br>
 		    Press "5" to accelerate <br>
 		    Press "h" to hyperspace <br>
+		    Press space to shoot a bullet <br>
 		    If you want to slow down, turn around and accelerate the opposite direction
 	    </footer>
 	</body>
